Bug 2013086 - When reparsing as a module, check for filename r=arai

Modules require a filename, see here:

https://searchfox.org/firefox-main/rev/0fce12de99c5e7d74536d8f93cf9778ce6199a1f/js/src/builtin/ModuleObject.cpp#1084

Differential Revision: https://phabricator.services.mozilla.com/D284153